Scheduler and import ready to use

--- a/templates/inventory/base.html
+++ b/templates/inventory/base.html
@@ -129,6 +129,7 @@
       font-weight: 700;
       animation: shine 6s both infinite;
     ">Auto scheduler</span></a>
+                <a href="{% url 'jobs_batch_entry' %}">Import jobs</a>
 
                 <style>
                   @keyframes shine {
