--- a/templates/inventory/admin_panel.html
+++ b/templates/inventory/admin_panel.html
@@ -8,6 +8,11 @@
       <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
     {% endfor %}
   {% endif %}
+
+  <form action="{% url 'delete_all_jobs' %}" method="post">
+    {% csrf_token %}
+    <button type="submit">DELETe</button>
+  </form>
   <div class="container mt-4">
     <h2 class="mb-4">Admin Panel</h2>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4 rounded shadow-sm">
