--- a/templates/inventory/jobs_batch_entry.html
+++ b/templates/inventory/jobs_batch_entry.html
@@ -66,7 +66,7 @@
       </form>
       <hr />
     {% endfor %}
-    <form method="POST" action="{% url 'clear_batch' %}">
+    <form method="POST" action="{% url 'clear_batch_jobs' %}">
       {% csrf_token %}
       <button type="submit">Clear All</button>
     </form>
